Fix height and spacing problems with the form on BannerEditor

--- a/src/style/BannerEditor.less
+++ b/src/style/BannerEditor.less
@@ -75,14 +75,14 @@
   height: 0px;
 
   .v-banner-ed__form__wrapper {
-    transform: translateY(-192px);
+    transform: translateY(-205px);
     transition: transform, 0.3s;
   }
 
   &[data-is-adding=true] {
     opacity: 1;
     transition: opacity, 0.2s;
-    height: 192px;
+    height: 205px;
 
     .v-banner-ed__form__wrapper {
       transform: translateY(0px);
@@ -91,7 +91,7 @@
   }
 
   input {
-    margin-bottom: 0.5em;
+    margin-bottom: 1em;
   }
 }
 
